added minimal style.css

--- a/FlaskingApp/app/templates/index.html
+++ b/FlaskingApp/app/templates/index.html
@@ -3,6 +3,7 @@
 {% block content %}
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Untitled</title>
 
@@ -10,8 +11,13 @@
 
   <body>
 
+     <div   class="content">
 
+       <h1>Flask Template</h1>
 
+       <p>This is the Flask template. It's as minimal as it can be, that's the point. Have fun building!</p>
+
+     </div>
 
   </body>
 </html>
