--- a/FlaskingApp/app/templates/about.html
+++ b/FlaskingApp/app/templates/about.html
@@ -3,7 +3,10 @@
 
 {% block content %}
 
-<div class="">
+<div class="content">
+
+  <h1>About</h1>
+  <p>Needless to say, this the about page.</p>
 
 </div>
 
