--- a/FlaskingApp/app/templates/base.html
+++ b/FlaskingApp/app/templates/base.html
@@ -3,6 +3,7 @@
 
 
        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+       <link rel="stylesheet" href="/static/style.css">
 
        <style>
 
